--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@ services:
     name: vehiculos-api
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn main:app --host 0.0.0.0 --port 10000"
+    startCommand: "uvicorn main:app --host 0.0.0.0 --port $PORT"
     plan: free
     autoDeploy: true
